[package]
name = "blazen"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = "z"
lto = true

[dependencies]
bitvec = "1.0.1"
heapless = "0.8.0"
libm = "0.2.11"
micromath = { version = "2.1.0", features = ["vector"] }
strum = { version = "0.26.3", features = ["derive"] }
wasm4 = { git = "https://github.com/FabricatorZayac/wasm4-rs", branch = "feature/controls" }
